--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -10,7 +11,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <!-- ogp -->
-  <meta property="og:title" content="" />
+  <meta property="og:title" content="CodeUps" />
   <meta property="og:type" content="" />
   <meta property="og:url" content="" />
   <meta property="og:image" content="" />
@@ -18,20 +19,35 @@
   <meta property="og:description" content="" />
   <!-- ファビコン -->
   <link rel="”icon”" href="" />
+  <!-- Googleフォント -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Noto+Sans+JP:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="./assets/js/script.js"></script>
 </head>
+
 <body>
   <header>
 
   </header>
   <main>
-    <div class="inner">
-      <p class="test">変更のテスト</p>
+
+    <div class="xxx__title section-title">
+      <h2 class="section-title__eng">Campaign</h2>
+      <p class="section-title__ja">キャンペーン</p>
     </div>
+
+    <div class="xxx_btn ">
+      <a href="#" class="button">
+        <p>View more</p>
+      </a>
+    </div>
+
   </main>
   <footer>
 
