--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
   <!-- Googleフォント -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Noto+Sans+JP:wght@400;500;700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
     rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -46,6 +47,31 @@
       <a href="#" class="button">
         <p>View more</p>
       </a>
+    </div>
+
+    <div class="xxx__item card">
+      <div class="card__img">
+        <img src="./assets/images/common/campaign_1.jpg" alt="">
+      </div>
+      <div class="card__body">
+        <div class="card__category">
+          <p>ライセンス講習</p>
+        </div>
+        <div class="card__title">
+          <p>ライセンス取得</p>
+        </div>
+        <div class="card__offer">
+          <p>全部コミコミ(お一人様)</p>
+        </div>
+        <div class="card__wrap">
+          <div class="card__original-price">
+            <p>¥56,000</p>
+          </div>
+          <div class="card__salet-price">
+            <p>¥46,000</p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
