card-campaign：クラス名変更

--- a/src/index.html
+++ b/src/index.html
@@ -49,25 +49,25 @@
       </a>
     </div>
 
-    <div class="xxx__item card">
-      <div class="card__img">
+    <div class="xxx__item card-campaign">
+      <div class="card-campaign__img">
         <img src="./assets/images/common/campaign_1.jpg" alt="">
       </div>
-      <div class="card__body">
-        <div class="card__category">
+      <div class="card-campaign__body">
+        <div class="card-campaign__category">
           <p>ライセンス講習</p>
         </div>
-        <div class="card__title">
+        <div class="card-campaign__title">
           <p>ライセンス取得</p>
         </div>
-        <div class="card__offer">
+        <div class="card-campaign__offer">
           <p>全部コミコミ(お一人様)</p>
         </div>
-        <div class="card__wrap">
-          <div class="card__original-price">
+        <div class="card-campaign__wrap">
+          <div class="card-campaign__original-price">
             <p>¥56,000</p>
           </div>
-          <div class="card__salet-price">
+          <div class="card-campaign__sale-price">
             <p>¥46,000</p>
           </div>
         </div>
