--- a/src/index.html
+++ b/src/index.html
@@ -25,23 +25,31 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
     rel="stylesheet">
+
   <!-- css -->
+  <!-- Swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <!-- Swiper -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script defer src="./assets/js/script.js"></script>
 </head>
 
 <body>
   <header class="header">
 
-    <div class="header__inner inner">
+    <div class="header__inner">
 
       <h1 class="header__logoBlock">
-        <a href="#" class="header__logoLink"><img src="./assets/images/common/logo.svg" alt=""></a>
+        <a href="" class="header__logoLink">
+          <img class="header__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+        </a>
       </h1>
 
-      <div class="header__drawer hamburger js-hamburger">
+      <div class="header__drawer hamburger js-hamburger is-active">
         <span></span>
         <span></span>
         <span></span>
@@ -50,25 +58,68 @@
       <nav class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#news">News</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Campaign</p>
+                <p class="pc-nav__ja">キャンペーン</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#service">Service</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">About us</p>
+                <p class="pc-nav__ja">私たちについて</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#results">Results</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Information</p>
+                <p class="pc-nav__ja">ダイビング情報</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">Price</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Blog</p>
+                <p class="pc-nav__ja">ブログ</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#comments">Comments</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Voice</p>
+                <p class="pc-nav__ja">お客様の声</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#faq">FAQs</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Price</p>
+                <p class="pc-nav__ja">料金一覧</p>
+              </div>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact">Contact</a>
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">FAQ</p>
+                <p class="pc-nav__ja">よくある質問</p>
+              </div>
+            </a>
+          </li>
+          <li class="pc-nav__item">
+            <a href="#campaign">
+              <div class="pc-nav__title">
+                <p class="pc-nav__eng">Contact</p>
+                <p class="pc-nav__ja">お問合せ</p>
+              </div>
+            </a>
           </li>
         </ul>
 
@@ -77,21 +128,155 @@
     </div>
 
     <!-- ドロワーメニュー -->
-    <nav class="header__sp-nav sp-nav js-sp-nav">
+    <nav class="header__sp-nav sp-nav js-sp-nav is-active">
+      <!-- <div class="sp-nav__head">
 
-      <ul class="sp-nav__items">
-        <li class="sp-nav__item"><a href="#news">News</a></li>
-        <li class="sp-nav__item"><a href="#service">Service</a></li>
-        <li class="sp-nav__item"><a href="#results">Results</a></li>
-        <li class="sp-nav__item"><a href="#price">Price</a></li>
-        <li class="sp-nav__item"><a href="#comments">Comments</a></li>
-        <li class="sp-nav__item"><a href="#faq">FAQs</a></li>
-        <li class="sp-nav__item"><a href="#contact">Contact</a></li>
-      </ul>
+        <div class="sp-nav__logoBlock">
+          <a href="" class="sp-nav__logoLink">
+            <img class="sp-nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          </a>
+        </div>
 
+      </div> -->
+
+      <div class="sp-nav__inner">
+        <div class="sp-nav__wrap">
+
+          <div class="sp-nav__body">
+
+            <div class="sp-nav__menu-items menu">
+
+              <div class="sp-nav__menu-item menu__column">
+
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">キャンペーン</p>
+                    </a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
+                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
+                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                  </ul>
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">私たちについて</p>
+                    </a>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="sp-nav__menu-item menu__column">
+
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">ダイビング情報</p>
+                    </a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
+                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
+                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                  </ul>
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">ブログ</p>
+                    </a>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="sp-nav__menu-item menu__column">
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">お客様の声</p>
+                    </a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">料金一覧</p>
+                    </a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
+                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
+                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="sp-nav__menu-item menu__column">
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">よくある質問</p>
+                    </a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">プライバシー<br>ポリシー</p>
+                    </a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">利用規約</p>
+                    </a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="">
+                      <p class="menu__title-text">おい問わ合せ</p>
+                    </a>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
     </nav>
-
-    <div class="sp-nav__bg"></div>
 
   </header>
   <main>
