--- a/src/index.html
+++ b/src/index.html
@@ -473,7 +473,6 @@
         </a>
       </div>
 
-      <!-- </div> -->
     </section>
 
     <section class="info">
@@ -644,7 +643,7 @@
 
               <div class="voice-card__right">
                 <div class="voice-card__img">
-                  <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
+                  <img src="./assets/images/common/voice_2.jpg" alt="笑顔の女性の顔写真">
                 </div>
               </div>
 
@@ -779,8 +778,46 @@
 
           <div class="contact__top">
 
+            <div class="contact__logoBlock title-line">
+              <img class="contact__logo" src="../assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+            </div>
 
-            
+            <div class="contact__flex">
+              <div class="contact__info text">
+                <p>沖縄県那覇市1-1</p>
+                <p>TEL:0120-000-0000</p>
+                <p>営業時間:8:30-19:00</p>
+                <p>定休日:毎週火曜日</p>
+              </div>
+
+              <div class="contact__map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57272.985300498585!2d127.64350247426076!3d26.2109364369767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1692465674459!5m2!1sja!2sjp"
+                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="contact__bottom">
+
+            <div class="contact__title section-title">
+              <h2 class="section-title__eng">Contact</h2>
+              <p class="section-title__ja">お問合せ</p>
+            </div>
+
+            <div class="contact__msg">
+              <p class="contact__msg-text">
+                ご予約・お問い合わせはコチラ
+              </p>
+            </div>
+
+            <div class="contact__btn ">
+              <a href="#" class="button">
+                <p>Contact us</p>
+              </a>
+            </div>
+
           </div>
 
         </div>
