--- a/src/index.html
+++ b/src/index.html
@@ -475,6 +475,60 @@
 
     </section>
 
+    <section id="#about" class="about">
+      <div class="about__inner inner">
+
+        <div class="campaign__title section-title">
+          <h2 class="section-title__eng">About us</h2>
+          <p class="section-title__ja">私たちについて</p>
+        </div>
+
+        <div class="about__images">
+
+          <div class="about__image-large">
+            <img src="./assets/images/common/about_sp_large.jpg" alt="">
+            <!-- <picture>
+              <source srcset="./assets/images/common/about_pc_large.jpg" media="(min-width:768px)">
+            </picture> -->
+          </div>
+          <div class="about__image-small">
+            <img src="./assets/images/common/about_sp_small.jpg" alt="">
+            <!-- <picture>
+              <source srcset="./assets/images/common/about_pc_small.jpg" media="(min-width:768px)">
+            </picture> -->
+          </div>
+
+        </div>
+
+        <div class="about__content">
+
+          <div class="about__subtitle">
+            <p class="about__subtitle-text">Dive into<br>the Ocean</p>
+          </div>
+
+          <div class="about__wrap">
+            <div class="about__text">
+              <p class="about__text-text text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+              </p>
+            </div>
+
+            <div class="about__btn">
+              <a href="#" class="button">
+                <p>View more</p>
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </section>
+
     <section class="info">
       <div class="info__inner inner">
 
