header hover：完了

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
     rel="stylesheet">
-
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <!-- Original CSS -->
@@ -67,7 +66,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#about">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">About us</p>
                 <p class="pc-nav__ja">私たちについて</p>
@@ -75,7 +74,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#info">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Information</p>
                 <p class="pc-nav__ja">ダイビング情報</p>
@@ -83,7 +82,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#blog">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Blog</p>
                 <p class="pc-nav__ja">ブログ</p>
@@ -91,7 +90,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#voice">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Voice</p>
                 <p class="pc-nav__ja">お客様の声</p>
@@ -99,7 +98,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#price">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Price</p>
                 <p class="pc-nav__ja">料金一覧</p>
@@ -107,7 +106,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#contact">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">FAQ</p>
                 <p class="pc-nav__ja">よくある質問</p>
@@ -115,7 +114,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="#contact">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">Contact</p>
                 <p class="pc-nav__ja">お問合せ</p>
@@ -336,7 +335,7 @@
       </div>
     </div>
 
-    <section class="campaign">
+    <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
 
         <div class="campaign__title section-title">
@@ -465,7 +464,7 @@
 
     </section>
 
-    <section id="#about" class="about">
+    <section id="about" class="about">
       <div class="about__inner inner">
 
         <div class="campaign__title section-title">
@@ -519,7 +518,7 @@
 
     </section>
 
-    <section class="info">
+    <section id="info" class="info">
       <div class="info__inner inner">
 
         <div class="info__title section-title">
@@ -553,7 +552,7 @@
       </div>
     </section>
 
-    <section class="blog">
+    <section id="blog" class="blog">
       <div class="blog__inner inner">
 
         <div class="blog__title section-title section-title--white">
@@ -622,7 +621,7 @@
       </div>
     </section>
 
-    <section class="voice">
+    <section id="voice" class="voice">
       <div class="voice__inner inner">
 
         <div class="voice__title section-title">
