--- a/src/index.html
+++ b/src/index.html
@@ -129,15 +129,12 @@
 
     <!-- ドロワーメニュー -->
     <nav class="header__sp-nav sp-nav js-sp-nav">
-      <!-- <div class="sp-nav__head">
 
-        <div class="sp-nav__logoBlock">
-          <a href="" class="sp-nav__logoLink">
-            <img class="sp-nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
-          </a>
-        </div>
-
-      </div> -->
+      <div class="sp-nav__logoBlock">
+        <a href="" class="sp-nav__logoLink">
+          <img class="sp-nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+        </a>
+      </div>
 
       <div class="sp-nav__inner">
         <div class="sp-nav__wrap">
@@ -150,7 +147,7 @@
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#campaign">
                       <p class="menu__title-text">キャンペーン</p>
                     </a>
                   </div>
@@ -164,7 +161,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#about">
                       <p class="menu__title-text">私たちについて</p>
                     </a>
                   </div>
@@ -177,7 +174,7 @@
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#info">
                       <p class="menu__title-text">ダイビング情報</p>
                     </a>
                   </div>
@@ -191,7 +188,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#blog">
                       <p class="menu__title-text">ブログ</p>
                     </a>
                   </div>
@@ -205,7 +202,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#voice">
                       <p class="menu__title-text">お客様の声</p>
                     </a>
                   </div>
@@ -214,7 +211,7 @@
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#price">
                       <p class="menu__title-text">料金一覧</p>
                     </a>
                   </div>
@@ -232,7 +229,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#FAQ">
                       <p class="menu__title-text">よくある質問</p>
                     </a>
                   </div>
@@ -262,7 +259,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
+                    <a href="#contact">
                       <p class="menu__title-text">おい問わ合せ</p>
                     </a>
                   </div>
