--- a/src/index.html
+++ b/src/index.html
@@ -147,23 +147,19 @@
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#campaign">
-                      <p class="menu__title-text">キャンペーン</p>
-                    </a>
+                    <a href="#campaign">キャンペーン</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
-                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
-                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">貸切体験ダイビング</a></li>
+                    <li><a href="#">ナイトダイビング</a></li>
                   </ul>
                 </div>
 
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="#about">
-                      <p class="menu__title-text">私たちについて</p>
-                    </a>
+                    <a href="#about">私たちについて</a>
                   </div>
 
                 </div>
@@ -174,23 +170,19 @@
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#info">
-                      <p class="menu__title-text">ダイビング情報</p>
-                    </a>
+                    <a href="#info">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
-                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
-                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
 
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="#blog">
-                      <p class="menu__title-text">ブログ</p>
-                    </a>
+                    <a href="#blog">ブログ</a>
                   </div>
 
                 </div>
@@ -202,23 +194,19 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="#voice">
-                      <p class="menu__title-text">お客様の声</p>
-                    </a>
+                    <a href="#voice">お客様の声</a>
                   </div>
 
                 </div>
 
                 <div class="menu__item">
                   <div class="menu__title">
-                    <a href="#price">
-                      <p class="menu__title-text">料金一覧</p>
-                    </a>
+                    <a href="#price">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#" class="menu__list-link">ライセンス取得</a></li>
-                    <li><a href="#" class="menu__list-link">貸切体験ダイビング</a></li>
-                    <li><a href="#" class="menu__list-link">ナイトダイビング</a></li>
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
 
@@ -229,9 +217,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="#FAQ">
-                      <p class="menu__title-text">よくある質問</p>
-                    </a>
+                    <a href="">よくある質問</a>
                   </div>
 
                 </div>
@@ -239,9 +225,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
-                      <p class="menu__title-text">プライバシー<br>ポリシー</p>
-                    </a>
+                    <a href="">プライバシー<br>ポリシー</a>
                   </div>
 
                 </div>
@@ -249,9 +233,7 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="">
-                      <p class="menu__title-text">利用規約</p>
-                    </a>
+                    <a href="">利用規約</a>
                   </div>
 
                 </div>
@@ -259,9 +241,15 @@
                 <div class="menu__item">
 
                   <div class="menu__title">
-                    <a href="#contact">
-                      <p class="menu__title-text">おい問わ合せ</p>
-                    </a>
+                    <a href="#contact">お問い合わせ</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#contact">サイトマップ</a>
                   </div>
 
                 </div>
