info：画像スライド1枚のみ完成

--- a/src/index.html
+++ b/src/index.html
@@ -516,7 +516,7 @@
         </div>
 
         <!-- できた！ -->
-        <div class="img-animation-wrap js-img-animation-wrap">
+        <div class="img-animation__wrap js-img-animation__wrap">
           <picture class="img-animation__img js-img-animation__img">
             <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
             <img src="./assets/images/common/info_sp.jpg" alt="">
